--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,9 +80,8 @@ apply from: "../../node_modules/react-native/react.gradle"
 
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf','AntDesignIcons.ttf' ] // Name of the font files you want to copy
+    iconFontNames: [ 'AntDesignIcons.ttf','MaterialIcons.ttf', 'EvilIcons.ttf', ] // Name of the font files you want to copy
 ]
-
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
