--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,6 +144,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-webview')
+    implementation project(':@react-native-community_netinfo')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
