--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^2.0.9",
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-vector-icons": "^6.4.2",
+    "react-native-webview": "^5.8.1",
     "react-navigation": "^3.9.1"
   },
   "devDependencies": {
